tests/ui/delegation/impl-reuse-negative-traits.stderr
error[E0749]: negative impls cannot have any items
  --> $DIR/impl-reuse-negative-traits.rs:16:1
   |
LL | reuse impl !Trait for F { &self.0 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0749`.
